# lmsys

./: .gitignore  README.md  exp007_colab.ipynb  exp013_colab.ipynb  exp027_colab.ipynb  exp028_colab.ipynb  fetch_data.sh  make_github_key_and_set_email.sh  multiple_run.sh  pyproject.toml
lmsys/eda/: 2407211408_make_error_analysis.ipynb  2407211845_make_valid_e027.ipynb  2407212303_check_oof.ipynb  2407220847_check_e038_e043_train_valid_data_is_same.ipynb  2407222250_make_2fold.ipynb  2407222250_make_fold.ipynb  2407230833_check_public_token_num.ipynb  2407250949_make_10fold.ipynb  2407271157_make_vallid_exp060.ipynb  eda.ipynb  temp_scale_by_exp027.ipynb
lmsys/exp/: exp001.ipynb  exp002.ipynb  exp003.ipynb  exp004.ipynb  exp005.ipynb  exp006.ipynb  exp007.ipynb  exp007_colab.ipynb  exp008.ipynb  exp009.ipynb  exp010.ipynb  exp011.ipynb  exp012.ipynb  exp012_colab.ipynb  exp013.ipynb  exp013_colab.ipynb  exp014.ipynb  exp015.ipynb  exp016.ipynb  exp017_miss.ipynb  exp018.ipynb  exp019.ipynb  exp01X.ipynb  exp020.ipynb  exp021.ipynb  exp022.ipynb  exp023.ipynb  exp023_colab.ipynb  exp025.ipynb  exp026.ipynb  exp027_baseline.ipynb  exp029.ipynb  exp030.ipynb  exp032.ipynb  exp033.ipynb  exp034.ipynb  exp035.ipynb  exp037.ipynb  exp038.ipynb  exp039.ipynb  (+46 more)
