[project]
name = "kaggle-at-paperspace-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sinchir0", email = "dekunattou@gmail.com" }
]
dependencies = [
    "ipython>=8.26.0",
    "ipykernel>=6.29.5",
    "ruff>=0.5.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.1",
    "polars==1.0.0",
    "scikit-learn>=1.5.1",
    "transformers==4.42.3",
    "datasets==2.20.0",
    "evaluate==0.4.2",
    "seqeval==1.2.2",
    "accelerate==0.32.0",
    "python-dotenv==1.0.1",
    "wandb==0.17.4",
    "bitsandbytes==0.43.1",
    "peft==0.11.1",
    "pyarrow==15.0.2",
    "kaggle>=1.6.14",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"kaggle-at-paperspace-template" = "kaggle_at_paperspace_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_at_paperspace_template"]
